# fmri-relational-coding

./: .env.example  .gitignore  LICENSE  README.md  cli.py  config.py  data_access.py  enums.py  flow_manager.py  main.py  pyproject.toml  rc_core.py  requirements.txt  settings.py
activations_patterns/: base_activations_pattern.py  fmri_activations_pattern.py
activtions_patterns/: artifical_activations_pattern.py  base_activations_pattern.py  fmri_activations_pattern.py
arithmetic_operations/: correlation_and_standartization.py  decomposition.py  distances_utils.py  matrix_op.py  signal_processing.py
data_normalizer/: raw_dataloader.py  split_wb_networks.py  utils.py  voxel_extraction.py  voxel_to_roi.py
docs/: custom_temporal_relational_coding.md  whole_brain_fmri_relational_coding.md
flows/: __init__.py  concat.py  custom_temporal.py  fmri_relational_coding.py  isfc.py  singular.py  snr.py
relational_coding/: artificial_relational_coding.py  custom_temporal_relational_coding.py  fmri_relationl_coding.py  relational_coding_base.py  singular_relational_coding.py
tests/: conftest.py  test_cli.py  test_concat_fmri_clips.py  test_config.py  test_correlation_standardization.py  test_custom_temporal.py  test_data_access.py  test_decomposition.py  test_distances.py  test_flows.py  test_matrix_op.py  test_preprocessing_steps.py  test_rc_core.py  test_relational_coding_base.py  test_settings.py  test_signal_processing.py  test_singular_relational_coding.py
utilities/: average_data.py  raw_data_converting_utils.py  retrieve_voxel_data.py  retrive_voxel_data.py
(+15 files in other folders)
